selfhost/test/parser/decorator_error_before_invalid_stmt.out
Error at %FILE_NAME%:2:1
Unexpected token 'while', expected one of 'val', 'var', 'func', 'type', 'enum', '@', 'export':
  |  while true { }
     ^